@@ -110,9 +110,11 @@ export function mimeFromExt(ext: string): string;
 export function getImageInfo(url: string): Promise<ImageInfo|null>;
 export function propertiesToHTML(prop: object, nameMap?: object, timeFormat?: string): string;
 export function getCacheSize(name: string): Promise<number>;
-export function getInputOrSelectElement(id: string): HTMLInputElement|HTMLSelectElement;
 export function getInputElement(id: string): HTMLInputElement;
 export function getSelectElement(id: string): HTMLSelectElement;
+export function getButtonElement(id: string): HTMLButtonElement;
+export function getDivElement(id: string): HTMLDivElement;
+export function getSpanElement(id: string): HTMLSpanElement;
 export function getBrowserInfo(): Promise<BrowserInfo>;
 export function parseUserAgent(userAgent: string): BrowserInfo;
 
