@@ -1,5 +1,6 @@
 1.6.12
 -Added dummy/i18next.js
+-Added web.getButtonElement, getDivElement, getSpanElement
 
 1.6.11
 -media.EXIFData.getPhotoLocation fixed getting problem
